<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/oad_tv_filepath"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_gray"
            android:padding="5dp" />

        <Button
            android:id="@+id/oad_btn_load_file"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_sel"
            android:text="@string/oad_load_file"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/oad_tv_state"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:text="@string/connected"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/oad_tv_image_type"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:text="Target Image Type: unknown"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/oad_tv_time"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:text="00:00"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/oad_tv_progress"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="0%"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/oad_tv_bytes"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="0 / 0"
            android:textSize="16sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/oad_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:max="100" />

    <com.ttcble.leui.widget.LogView
        android:id="@+id/logView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oad_send_interval"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/oad_sp_send_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:visibility="visible" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/oad_btn_start"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_sel"
        android:text="@string/oad_start"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />
</LinearLayout>